Fixed issue when getting information with multiple data per year
Related to #3